--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,6 @@
+:root {
+    --color-principal: #2596be
+}
 body {
-    background-color: #2596be;
+    background-color: var(--color-principal);
 }
